# qdrant-client

./: .gitignore  .pre-commit-config.yaml  README.md  migrate.py  mypy.ini  netlify.toml  pyproject.toml  sparse_discovery.py  sparse_recommend.py  usage.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: integration-tests-macos.yml  integration-tests.yml  python-publish.yml  release-sanity-check.yml  ruff-linting.yml  type-checkers.yml
docs/: .gitignore  generate_docs.sh
docs/source/: conf.py  index.rst  qdrant_client.async_client_base.rst  qdrant_client.async_qdrant_client.rst  qdrant_client.async_qdrant_fastembed.rst  qdrant_client.async_qdrant_remote.rst  qdrant_client.client_base.rst  qdrant_client.connection.rst  qdrant_client.conversions.common_types.rst  qdrant_client.conversions.conversion.rst  qdrant_client.conversions.rst  qdrant_client.fastembed_common.rst  qdrant_client.grpc.collections_pb2.rst  qdrant_client.grpc.collections_pb2_grpc.rst  qdrant_client.grpc.collections_service_pb2.rst  qdrant_client.grpc.collections_service_pb2_grpc.rst  qdrant_client.grpc.json_with_int_pb2.rst  qdrant_client.grpc.json_with_int_pb2_grpc.rst  qdrant_client.grpc.points_pb2.rst  qdrant_client.grpc.points_pb2_grpc.rst  qdrant_client.grpc.points_service_pb2.rst  qdrant_client.grpc.points_service_pb2_grpc.rst  qdrant_client.grpc.qdrant_pb2.rst  qdrant_client.grpc.qdrant_pb2_grpc.rst  qdrant_client.grpc.rst  qdrant_client.grpc.snapshots_service_pb2.rst  qdrant_client.grpc.snapshots_service_pb2_grpc.rst  qdrant_client.http.api.cluster_api.rst  qdrant_client.http.api.collections_api.rst  qdrant_client.http.api.points_api.rst  qdrant_client.http.api.rst  qdrant_client.http.api.service_api.rst  qdrant_client.http.api.snapshots_api.rst  qdrant_client.http.api_client.rst  qdrant_client.http.configuration.rst  qdrant_client.http.exceptions.rst  qdrant_client.http.models.models.rst  qdrant_client.http.models.rst  qdrant_client.http.rst  qdrant_client.local.async_qdrant_local.rst  (+23 more)
qdrant_client/: __init__.py  _pydantic_compat.py  async_client_base.py  async_qdrant_client.py  async_qdrant_fastembed.py  async_qdrant_remote.py  bearer_auth.py  client_base.py  connection.py  context_headers.py  fastembed_common.py  parallel_processor.py  qdrant_client.py  qdrant_client_async.py  qdrant_fastembed.py  qdrant_remote.py
qdrant_client/auth/: __init__.py  bearer_auth.py
qdrant_client/common/: client_exceptions.py  client_warnings.py  deprecations.py  retry.py  version_check.py  warnings.py
qdrant_client/conversions/: common_types.py  conversion.py
qdrant_client/embed/: __init__.py  _inspection_cache.py  builtin_embedder.py  common.py  embed_inspector.py  embedder.py  model_embedder.py  models.py  schema_parser.py  type_inspector.py  utils.py
qdrant_client/grpc/: __init__.py  collections_pb2.py  collections_pb2.pyi  collections_pb2_grpc.py  collections_service_pb2.py  collections_service_pb2_grpc.py  common_pb2.py  health_check_pb2.py  health_check_pb2_grpc.py  json_with_int_pb2.py  json_with_int_pb2.pyi  json_with_int_pb2_grpc.py  points_pb2.py  points_pb2.pyi  points_pb2_grpc.py  points_service_pb2.py  points_service_pb2_grpc.py  qdrant.proto  qdrant_common_pb2.pyi  qdrant_internal_service_pb2.py  qdrant_internal_service_pb2_grpc.py  qdrant_pb2.py  qdrant_pb2.pyi  qdrant_pb2_grpc.py  snapshots_service_pb2.py  snapshots_service_pb2.pyi  snapshots_service_pb2_grpc.py
qdrant_client/http/: __init__.py  api_client.py  exceptions.py
qdrant_client/hybrid/: formula.py  fusion.py  test_reranking.py
qdrant_client/local/: async_qdrant_local.py  datetime.py  datetime_utils.py  distances.py  geo.py  json_path_parser.py  local_collection.py  multi_distances.py  multivector_distances.py  order_by.py  payload_filters.py  payload_value_extractor.py  payload_value_setter.py  persistence.py  qdrant_local.py  sparse.py  sparse_distances.py
qdrant_client/migrate/: README.md  __init__.py  migrate.py  migrate_different_name.py
qdrant_client/models/: __init__.py
qdrant_client/proto/: collections.proto  common.proto  points.proto  points_service.proto  qdrant.proto
qdrant_client/uploader/: grpc_uploader.py  rest_uploader.py  uploader.py
qdrant_openapi_client/: __init__.py  api_client.py  exceptions.py  model_utils.py
qdrant_openapi_client/api/: __init__.py  collections_api.py  points_api.py
qdrant_openapi_client/apis/: __init__.py
qdrant_openapi_client/docs/: AliasOperations.md  AliasOperationsAnyOf.md  AliasOperationsAnyOf1.md  AliasOperationsAnyOf1DeleteAlias.md  AliasOperationsAnyOf2.md  AliasOperationsAnyOf2RenameAlias.md  AliasOperationsAnyOfCreateAlias.md  CollectionConfig.md  CollectionDescription.md  CollectionInfo.md  CollectionParams.md  CollectionStatus.md  CollectionUpdateOperations.md  CollectionsApi.md  CollectionsResponse.md  (+123 more)
tests/: async-client-consistency-check.sh  check_async_client.py  config.py  coverage-test.sh  grpc_upload.py  inspection-cache-consistency-check.sh  integration-tests.sh  release_sanity_check.py  test_async_qdrant_client.py  test_collections_api.py  test_common.py  test_create_collection_if_not_exists.py  test_embed.py  test_fast_embed.py  test_fastembed.py  test_in_memory.py  test_local_persistence.py  test_migrate.py  test_qdrant_client.py  test_query_points_sequence.py  test_remote_inference.py  test_remove_inference.py  test_retry.py  test_sparse_discovery.py  test_tracing.py  test_upload_points_with_nan.py  type_stub.py  utils.py
tools/: DEVELOPMENT.md  check_release_package.py  generate_async_client.sh  generate_docs.sh  generate_docs_netlify.sh  generate_grpc_client.sh  generate_inference_structures.sh  generate_rest_client.sh  merge_openapi.py  populate_inspection_cache.py  populate_inspection_cache.sh  structures.json
(+114 files in other folders)
