[tool.poetry]
name = "qdrant-client"
version = "1.3.2"
description = "Client library for the Qdrant vector search engine"
authors = ["Andrey Vasnetsov <andrey@qdrant.tech>"]
packages = [
    {include = "qdrant_client"},
    {include = "qdrant_openapi_client"}
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/qdrant/qdrant-client"
repository = "https://github.com/qdrant/qdrant-client"
keywords = ["vector", "search", "neural", "matching", "client"]

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
httpx = { version = ">=0.14.0", extras = ["http2"] }
numpy = [
    { version = "<1.21", python = "<3.8" },
    { version = ">=1.21", python = ">=3.8" }
]
pydantic = ">=1.10.8"
grpcio = { version = ">=1.41.0", allow-prereleases = true }
grpcio-tools = ">=1.41.0"
urllib3 = "^1.26.14"
portalocker = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
grpcio-tools = "^1.46.0"
sphinx = "^4.4.0"
qdrant-sphinx-theme = { git = "https://github.com/qdrant/qdrant_sphinx_theme.git", branch = "master" }
coverage = "^6.3.3"
pytest-asyncio = "^0.21.0"
pytest-timeout = "^2.1.0"

[tool.poetry.group.types.dependencies]
pyright = "^1.1.293"
mypy = "^1.0.0"
types-protobuf = "^4.21.0.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
