[tool.poetry]
name = "qdrant-client"
version = "1.7.2"
description = "Client library for the Qdrant vector search engine"
authors = ["Andrey Vasnetsov <andrey@qdrant.tech>"]
packages = [
    {include = "qdrant_client"},
    {include = "qdrant_openapi_client"}
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/qdrant/qdrant-client"
repository = "https://github.com/qdrant/qdrant-client"
keywords = ["vector", "search", "neural", "matching", "client"]

[tool.poetry.dependencies]
python = ">=3.8"
httpx = { version = ">=0.14.0", extras = ["http2"] }
numpy = [
    { version = "<1.21", python = "<3.8" },
    { version = ">=1.21", python = ">=3.8,<3.12" },
    { version = ">=1.26", python = ">=3.12" }
]
pydantic = ">=1.10.8"
grpcio = { version = ">=1.41.0", allow-prereleases = true }
grpcio-tools = ">=1.41.0"
urllib3 = ">=1.26.14,<3"
portalocker = "^2.7.0"
fastembed = [
    { version = "0.1.1", optional = true, python = "<3.12" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
grpcio-tools = [
    # the proper version to use for generating grpc client is python 3.10.10
    { version = "1.48.2", python = "3.10" },
    { version = "^1.46" }
]
coverage = "^6.3.3"
pytest-asyncio = "^0.21.0"
pytest-timeout = "^2.1.0"
autoflake = "^2.2.1"
isort = "^5.12.0"
black = "^23.9.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^4.5.0"
qdrant-sphinx-theme = { git = "https://github.com/qdrant/qdrant_sphinx_theme.git", branch = "master" }
nbsphinx = "^0.9.3"
ipython = "8"
Pygments= "2.16.1"

[tool.poetry.group.types.dependencies]
pyright = "^1.1.293"
mypy = "^1.0.0"
types-protobuf = "^4.21.0.5"

[tool.poetry.extras]
fastembed = ["fastembed"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
markers = [
    "fastembed: marks tests that require the fastembed package (deselect with '-m \"not fastembed\"')",
    "no_fastembed: marks tests that do not require the fastembed package (deselect with '-m \"not no_fastembed\"')"
]
