[tool.poetry]
name = "qdrant-client"
version = "1.12.2"
description = "Client library for the Qdrant vector search engine"
authors = ["Andrey Vasnetsov <andrey@qdrant.tech>"]
packages = [
    {include = "qdrant_client"}
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/qdrant/qdrant-client"
repository = "https://github.com/qdrant/qdrant-client"
keywords = ["vector", "search", "neural", "matching", "client"]

[tool.poetry.dependencies]
python = ">=3.9"
httpx = { version = ">=0.20.0", extras = ["http2"] }
numpy = [
    { version = ">=1.21,<2.1.0", python = "<3.10" },
    { version = ">=1.21", python = ">=3.10,<3.12" },
    { version = ">=1.26", python = ">=3.12,<3.13" },
    { version = ">=2.1.0", python = ">=3.13" }
]
pydantic = ">=1.10.8"
grpcio = { version = ">=1.41.0", allow-prereleases = true }
grpcio-tools = ">=1.41.0"
urllib3 = ">=1.26.14,<3"
portalocker = "^2.7.0"
fastembed = [
    { version = "0.5.0", optional = true },
]
fastembed-gpu = [
    { version = "0.5.0", optional = true },
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
grpcio-tools = [
    # the proper version to use for generating grpc client is python 3.10.10
    { version = "1.48.2", python = "3.10" },
    { version = "^1.46" }
]
coverage = "^6.3.3"
pytest-asyncio = "^0.21.0"
pytest-timeout = "^2.1.0"
autoflake = "^2.2.1"
ruff = "0.4.3"


[tool.poetry.group.docs.dependencies]
sphinx = "^5.0.0"
qdrant-sphinx-theme = { git = "https://github.com/qdrant/qdrant_sphinx_theme.git", branch = "master" }
nbsphinx = "^0.9.3"
ipython = "8"
Pygments= "2.16.1"

[tool.poetry.group.types.dependencies]
pyright = ">=1.1.293"
mypy = "^1.0.0"
types-protobuf = "^4.21.0.5"

[tool.poetry.extras]
fastembed = ["fastembed"]
fastembed-gpu = ["fastembed-gpu"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"

[tool.pytest.ini_options]
markers = [
    "fastembed: marks tests that require the fastembed package (deselect with '-m \"not fastembed\"')",
    "no_fastembed: marks tests that do not require the fastembed package (deselect with '-m \"not no_fastembed\"')"
]

[tool.isort]
known_third_party = "grpc"
